# crawl-airdates

./: LICENSE  README.md
exportseries/: .gitignore  README.md  pyproject.toml
exportseries/exportseries/: main.py
exportseries/tests/: test_main.py
premieres/: .gitignore  README.md  mypy.ini  pyproject.toml
premieres/premieres/: main.py
premieres/tests/: test_main.py
